# rust-witnet

bridges/centralized-ethereum/src/: lib.rs  main.rs
bridges/centralized-ethereum/src/actors/: dr_sender.rs  eth_poller.rs
config/: Cargo.toml
core/src/actors/: codec.rs  connections_manager.rs  session.rs
data_structures/src/: builders.rs  mainnet_validations.rs
validations/src/: validations.rs
wallet/: Cargo.toml
wallet/src/: constants.rs  lib.rs  models.rs  schema.rs
wallet/src/actors/app/: methods.rs
wallet/src/actors/app/handlers/: get_wallet_infos.rs
wallet/src/actors/worker/: methods.rs  mod.rs
wallet/src/actors/worker/handlers/: wallet_infos.rs
wallet/src/repository/: mod.rs  xwallets.rs
